--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^6.24.0",
     "react-scroll": "^1.9.0",
     "react-skroll": "^0.7.3",
+    "react-spring": "^9.7.5",
     "react-spring-3d-carousel": "^1.3.4",
     "react-tooltip": "^5.27.0",
     "require-context": "^1.1.0",
